add 2nd product (red shoe)

--- a/SneakerShop/index.html
+++ b/SneakerShop/index.html
@@ -28,11 +28,10 @@
                 <li class="active-product">001</li>
                 <li>002</li>
                 <li>003</li>
-                <li>004</li>
             </ul>
         </div>
         <ul id="products">
-            <li class="product">
+            <li class="product" id="prod001">
                 <div class="main-product-img"></div>
                 <div class="side-product-img1"></div>
                 <div class="side-product-img2"></div>
@@ -40,11 +39,31 @@
                 <div class="product-info">
                     <div class="prod-info-container">
                         <small class="prod-category">Nike Sneakers</small>
-                        <h2 class="prod-main-title">Black and Orange Nike High Tops</h2>
+                        <h2 class="prod-main-title">Black and Orange High Tops</h2>
                         <p class="prod-description">When orange meets black. Nike on another amazing combination of
                             colors inspired by Autumn that can be worn in any situtation.</p>
                         <h3 class="prod-price">299$</h3>
-                        <ul>
+                        <ul class="dropdowns">
+                            <li>Product Information</li>
+                            <li>About the Brand</li>
+                            <li>Warranty and Care</li>
+                        </ul>
+                        <button>Add to Cart</button>
+                    </div>
+                </div>
+            </li>
+            <li class="product" id="prod002">
+                <div class="main-product-img"></div>
+                <div class="side-product-img1"></div>
+                <div class="side-product-img2"></div>
+                <div class="side-product-img3"></div>
+                <div class="product-info">
+                    <div class="prod-info-container">
+                        <small class="prod-category">Nike Trainers</small>
+                        <h2 class="prod-main-title">Revolt Red White Trainers</h2>
+                        <p class="prod-description">Nike x Revolt team up to create this amazing red black and white combination in a very limited edition.</p>
+                        <h3 class="prod-price">149$</h3>
+                        <ul class="dropdowns">
                             <li>Product Information</li>
                             <li>About the Brand</li>
                             <li>Warranty and Care</li>
