--- a/Hotel/index.html
+++ b/Hotel/index.html
@@ -57,7 +57,7 @@
         <!-- If we need pagination -->
         <div class="swiper-pagination"></div>
     </div>
-    <img class='svg arrow-down'src="img/icons/arrow-down.svg" alt="Arrow Down"/>
+    <img class='svg arrow-down'src="img/icons/arrow.svg" alt="Arrow Down"/>
     <div class="booking-container">
         <h2>Book your stay</h2>
         <form action="" class="booking">
