rooms section / swiper

--- a/Hotel/index.html
+++ b/Hotel/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Pattaya&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;1,200&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js" defer></script>
     <script src="js/swiper.js" defer></script>
 </head>
@@ -49,13 +50,6 @@
                 <h3 class="slider-text">Outdoor swimming pools for kids and adults</h3>
             </div>
         </div>
-
-        <!-- If we need navigation buttons -->
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
-
-        <!-- If we need pagination -->
-        <div class="swiper-pagination"></div>
     </div>
     <img class='svg arrow-down'src="img/icons/arrow.svg" alt="Arrow Down"/>
     <div class="booking-container">
@@ -87,6 +81,79 @@
             <button type="submit">Search</button>
         </form>
     </div>
+    <section id="rooms" class="sections">
+        <div class="page-limits">
+            <img src="img/images/palm_tree.png" class="backgr-img" alt="Palm Tree">
+            <h2 class="heading">Rooms</h2>
+            <div class="swiper-container sections-swiper">
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper room-slides">
+                    <!-- Slides -->
+                    <div class="swiper-slide">
+                        <img src="img/images/rooms/room1.jpg" alt="Double Room">
+                        <div class="rooms-details">
+                            <h3>Double Room</h3>
+                            <small class="guests"><i class="far fa-user"></i> 4 Adults</small>
+                            <p class="room-description">530 sq. ft. Enjoy golf course, tropical garden or mountain views from the private balcony of a resort view room.
 
+                                The room features a king-sized bed, full sofa bed, 42-inch TV, PlayStation3, desk, mini-refrigerator and coffeemaker. The bathroom features a tub and spa-quality bath amenities. Sleeps 4.</p>
+                            <ul class="amenities">
+                                <li><i class="fas fa-utensils"></i></li>
+                                <li><i class="fas fa-concierge-bell inactive"></i></li>
+                                <li><i class="fas fa-wheelchair"></i></li>
+                                <li><i class="fas fa-wifi"></i></li>
+                                <li><i class="fas fa-shuttle-van inactive"></i></li>
+                                <li><i class="fas fa-tv"></i></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="img/images/rooms/room1.jpg" alt="Double Room">
+                        <div class="rooms-details">
+                            <h3>Double Room</h3>
+                            <small class="guests"><i class="far fa-user"></i> 4 Adults</small>
+                            <p class="room-description">530 sq. ft. Enjoy golf course, tropical garden or mountain views from the private balcony of a resort view room.
+
+                                The room features a king-sized bed, full sofa bed, 42-inch TV, PlayStation3, desk, mini-refrigerator and coffeemaker. The bathroom features a tub and spa-quality bath amenities. Sleeps 4.</p>
+                            <ul class="amenities">
+                                <li><i class="fas fa-utensils"></i></li>
+                                <li><i class="fas fa-concierge-bell inactive"></i></li>
+                                <li><i class="fas fa-wheelchair"></i></li>
+                                <li><i class="fas fa-wifi"></i></li>
+                                <li><i class="fas fa-shuttle-van inactive"></i></li>
+                                <li><i class="fas fa-tv"></i></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="img/images/rooms/room1.jpg" alt="Double Room">
+                        <div class="rooms-details">
+                            <h3>Double Room</h3>
+                            <small class="guests"><i class="far fa-user"></i> 4 Adults</small>
+                            <p class="room-description">530 sq. ft. Enjoy golf course, tropical garden or mountain views from the private balcony of a resort view room.
+
+                                The room features a king-sized bed, full sofa bed, 42-inch TV, PlayStation3, desk, mini-refrigerator and coffeemaker. The bathroom features a tub and spa-quality bath amenities. Sleeps 4.</p>
+                            <ul class="amenities">
+                                <li><i class="fas fa-utensils"></i></li>
+                                <li><i class="fas fa-concierge-bell inactive"></i></li>
+                                <li><i class="fas fa-wheelchair"></i></li>
+                                <li><i class="fas fa-wifi"></i></li>
+                                <li><i class="fas fa-shuttle-van inactive"></i></li>
+                                <li><i class="fas fa-tv"></i></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+
+                <!-- If we need scrollbar -->
+                <div class="swiper-scrollbar"></div>
+            </div>
+
+        </div>
+    </section>
 </body>
 </html>
