--- a/MusicNetflixStyleGridAnimation/index.html
+++ b/MusicNetflixStyleGridAnimation/index.html
@@ -17,11 +17,12 @@
         <main>
             <div id="hdr-cont">
                 <h1>Experience <span id="bop">music</span>
-                    <br>like <span class="underline">never</span> before.</h1>
+                    <br>like <span class="underline">never</span> before.
+                </h1>
                 <button><a href="#">Learn More</a></button>
             </div>
             <div id="hdr-img">
-                <img src="/assets/headphones.png" alt="headphones">
+                <img src="./assets/headphones.png" alt="headphones">
             </div>
         </main>
     </header>
